<resources>
    <string name="app_name">Arboretum Wojsławice</string>
    <string name="title_home">Aktualności</string>
    <string name="title_map_and_route">Mapy / Trasy</string>
    <string name="title_favoutites">Ulubione</string>
    <string name="title_more">Więcej</string>
    <string name="title_map">Mapa</string>
    <string name="title_route">Trasy</string>
    <string name="title_qr_code">QR kod</string>

    <!-- Toolbars -->
    <string name="toolbar_qr_code">QR kod</string>
    <string name="toolbar_plants_list">Spis roślin</string>
    <string name="toolbar_events_list">Kalendarz imprez</string>
    <string name="toolbar_price">Cennik</string>
    <string name="toolbar_contact">Kontakt</string>
    <string name="toolbar_rules">Regulamin</string>
    <string name="toolbar_hotels_list">Hotele w pobliżu</string>
    <string name="toolbar_attractions_list">Atrakcje w pobliżu</string>
    <string name="toolbar_restaurants_list">Restauracje w pobliżu</string>
    <string name="toolbar_route_detail">Szczegóły trasy</string>
    <string name="toolbar_navigation">Nawigacja</string>
    <string name="toolbar_neighbourhood">W pobliżu Wojsławic</string>
    <string name="toolbar_opening_hours">Godziny otwarcia</string>
    <string name="toolbar_settings">Ustawienia</string>
    <string name="toolbar_plant_location_map">Lokalizacja rośliny</string>
    <string name="toolbar_event_detail">Wydarzenia z</string>
    <string name="toolbar_about_us">O nas, czyli o autorach</string>

    <!-- TabBars -->
    <string name="tab_map">Mapa</string>
    <string name="tab_route">Trasy</string>

    <!-- Options in MoreFragment-->
    <string-array name="more_options">
        <item>Godziny otwarcia</item>
        <item>Cennik</item>
        <item>Kalendarz imprez</item>
        <item>Spis roślin</item>
        <item>W pobliżu</item>
        <item>Kontakt</item>
        <item>Regulamin</item>
        <item>Ustawienia</item>
    </string-array>

    <string-array name="more_options_images">
        <item>ic_clock</item>
        <item>ic_tickets_black</item>
        <item>ic_calendar</item>
        <item>ic_flowering</item>
        <item>ic_neighbourhood</item>
        <item>ic_phone</item>
        <item>ic_important</item>
        <item>ic_settings</item>
    </string-array>


    <!-- Przykładowe; wygenerowane automatycznie; tymczasowe; do usunięcia -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Ustawienia</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_price_for_services">Usługi</string>
    <string name="hello_price_for_tickets">Bilety</string>

    <!-- Marta - example strings to use with data binding -->
    <string name="route_length">Długość trasy: %s</string>
    <string name="route_time">Szacowany czas: %s</string>
    <string name="plant_genus">Rodzaj - %s</string>
    <string name="plant_kind">Gatunek - %s</string>

    <!-- Marta - example strings to use in PriceActivity (activity_price.xml) -->
    <string name="price_title">Cennik (biletów)</string>
    <string name="price_amount">%s zł</string>

    <!-- OPENING HOURS -->
    <string name="open_hours_main_text">Arboretum czynne od 15.04.2018\ndo 21.10.2018 (także w święta)</string>
    <string name="open_hours_opening_text">Godziny otwarcia Arboretum</string>
    <string name="open_hours_opening_hours">pon–niedz 9:00–20:00</string>
    <string name="open_hours_opening_ticket_text">Godziny otwarcia kas</string>
    <string name="open_hours_opening_ticket_hours">pon–niedz 9:00–18:00</string>
    <string name="open_hours_info1">Bilet można kupić także w biletomacie</string>
    <string name="open_hours_subinfo1">Kasy nr 1 i 2 wyposażone są\nw terminale płatnicze</string>
    <string name="open_hours_info2">Bilet jest ważny od momentu skasowania</string>

    <!-- CONTACT -->
    <string name="contact_main_text">Arboretum Wojsławice w Niemczy</string>
    <string name="contact_main_text_info">Ogród Botaniczny Uniwersytetu Wrocławskiego</string>
    <string name="contact_main_address">Wojsławice 2\n58–230 Niemcza, Polska</string>
    <string name="contact_main_mail">aw@uwr.edu.pl</string>
    <string name="contact_main_telephone">71 322 59 57</string>
    <string name="contact_main_tel_info">(w dni powszednie od 7:00 do 15:00)</string>
    <string name="contact_extra_text">Wystawianie faktur i rezerwacja ogniska: Katarzyna Bondarczuk</string>
    <string name="contact_extra_info">(od. pn. do pt., w godz. 7:00 – 15:00)</string>
    <string name="contact_extra_mail">katarzyna.bondarczuk@uwr.edu.pl</string>
    <string name="contact_extra_telephone">696 137 984</string>
    <string name="contact_cafe_text">Cafe-bar „OGRODOWE SMAKI”</string>
    <string name="contact_cafe_mail">kontakt@univerde.pl</string>
    <string name="contact_cafe_telephone">503 317 100</string>
    
    
    <!-- WEATHER -->
    <string name="weather_main">Pogoda na dziś!</string>
    <string name="weather_no_info">brak informacji o pogodzie\nwymagane połączenie z internetem</string>
    <string name="weather_clear_sky">Słonecznie, bezchmurnie</string>
    <string name="weather_few_clouds">Niewielkie zachmurzenie</string>
    <string name="weather_scattered_clouds">Zachmurzenie</string>
    <string name="weather_broken_clouds">Silne zachmurzenie</string>
    <string name="weather_drizzle">Mżawka</string>
    <string name="weather_rain">Opady deszczu</string>
    <string name="weather_thunderstorm">Burze</string>
    <string name="weather_snow">Śnieg</string>
    <string name="weather_mist">Mgła</string>


    <!-- PLANTS -->
    <string name="plant_flowering">Okres kwitnienia</string>
    <string name="plant_seasson_date">brak informacji</string>


    <!-- HOME FRAGMENT (NEWS) -->
    <string name="news_title">Aktualności</string>
    <string name="event_title">Nadchodzące wydarzenia 2018</string>

    <string name="event_title_text">A już</string>
    <string name="event_info_text_1">Oferujemy takie wydarzenia jak</string>
    <string name="event_info_text_2">Kliknij, by poznać więcej szczegółów.</string>
    <string name="ampersand">oraz</string>
    <string name="event_today">Dzisiaj w Arboretum...</string>

    <string name="plant_title">W okresie rozkwitu</string>


    <!-- ATTRACTIONS -->
    <string name="attractions_distance">w odległości %s</string>
    <string name="hotelrestaurant_distance">%s \nw odległości %s</string>
    <string name="hotelrestaurant_rating_info">brak informacji o ocenie</string>


    <!-- PLANTS -->
    <string name="plant_no_image">brak zdjęcia</string>


    <!-- Toasts -->
    <string name="toast_exit">Naciśnij jeszcze raz przycisk "Powrót", aby zakończyć działanie aplikacji</string>
    <string name="choose_language">Wybierz język:</string>
    <string name="choose_sync">Synchronizacja bazy danych:</string>
    <string name="checkBox_sync">Automatyczna aktualizacja danych po włączeniu aplikacji</string>
    <string name="about_us">O autorach</string>


    <!--rules-->
    <string name="rules_title">REGULAMIN</string>
    <string name="rules_subtitle">Szanowni Goście, nie zezwalamy:</string>

    <string name="rules_content_1">zrywać i niszczyć roślin,</string>
    <string name="rules_content_1b">zbierać nasion ani owoców (wyjątek stanowi sad czereśniowy),</string>
    <string name="rules_content_2">deptać rabat,</string>
    <string name="rules_content_3">przebywać na terenie parku w czasie burzy,</string>
    <string name="rules_content_4">wprowadzać psów (z wyjątkiem psów przewodników),</string>
    <string name="rules_content_5">wprowadzać rowerów,</string>
    <string name="rules_content_6">pozostawiać bez opieki dzieci do lat 14,</string>
    <string name="rules_content_7">palić papierosów,</string>
    <string name="rules_content_8">spożywać alkoholu.</string>

    <string name="rules_content_11">Ze względu na teren podgórski, zalecamy odpowiednie obuwie.</string>
    <string name="rules_content_12">W czasie owocowania sadu czereśniowego Goście korzystają z drabin na własną odpowiedzialność.</string>
    <string name="rules_content_13">Grillowanie jest dozwolone tylko w miejscach do tego wyznaczonych i odpowiednio oznakowanych.</string>
    <string name="rules_content_14">Wynajęcie wigwamu z ogniskiem jest płatne i wymaga zgłoszenia pod nr tel. 696 137 984. (Cena obejmuje rezerwację miejsca, drewno, rozpalenie ogniska i sprzątanie)</string>
    <string name="rules_content_15">Korzystanie przez dzieci z wydzielonego placu zabaw możliwe jest pod nadzorem osób dorosłych. (Na terenie placu zabaw obowiązuje „Regulamin placu zabaw”)</string>
    <string name="rules_content_16">Za przestrzeganie regulaminu oraz zachowanie się grupy szkolnej odpowiada nauczyciel.</string>
    <string name="rules_content_17">Fotografowanie i filmowanie w celach komercyjnych wymaga uzgodnienia z dyrekcją.</string>
    <string name="rules_content_18">Dzwon zapowiada zamknięcie bramy za 15 minut.</string>


    <!--Event-->
    <string name="event_time_begin">godz.: %s</string>
    <string name="event_time_end">\u0020-\u0020%s</string>

    <string-array name="months_name">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>

    <string-array name="months_name_inflected">
        <item>stycznia</item>
        <item>lutego</item>
        <item>marca</item>
        <item>kwietnia</item>
        <item>maja</item>
        <item>czerwca</item>
        <item>lipca</item>
        <item>sierpnia</item>
        <item>września</item>
        <item>października</item>
        <item>listopada</item>
        <item>grudnia</item>
    </string-array>
    <string name="event_dates">Odbywa się w dniach:</string>


    <!--QR code-->
    <string name="qr_code_information">Skieruj aparat na kod QR,\naby uzyskać więcej informacji o roślinie.</string>


    <!-- TOASTS -->
    <string name="toast_add_favourite_toast">Dodano do ulubionych</string>
    <string name="toast_delete_favourite_toast">Usunięto z ulubionych</string>

    <string name="favourites_text">Nie masz jeszcze żadnych\nulubionych roślin!</string>


    <!-- EVENTS - CALENDAR -->
    <string name="calendar_01">Serdecznie zapraszamy do uczestnictwa w wydarzeniach</string>
    <string name="calendar_02">Arboretum ma przyjemność zaprosić na wydarzenia</string>
    <string name="calendar_03">Z radością oferujemy dużą różnorodność wydarzeń</string>


    <string name="about_us_main">Autorami aplikacji są studenci 3 roku informatyki na wydziale Informatyki i Zarządzania Politechniki Wrocławskiej:\n\n- Michał Kawa\n- Weronika Piotrowska\n- Barbara Wędrychowicz\n- Marta Witkowska</string>




</resources>
