<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map_and_route"
        android:icon="@drawable/icons8_map"
        android:title="@string/title_map_and_route" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/icons8_heart"
        android:title="@string/title_favoutites" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/icons8_more"
        android:title="@string/title_more" />

</menu>

    <!--Tutaj Michał-->
    <!--Gdzie kawa tam zabawa :D-->
    <!--Pozdrawiam-->